test_sources = [
    'tests.vala',
    'Arrays.test.vala',
    'Bytes.test.vala',
    'Zlib.test.vala',
    'Histogram.test.vala', 
    'Int8Histogram.test.vala',
    'Int16Histogram.test.vala',
    'Int64.test.vala',
    'ZigZag.test.vala'
]

test('hdr-tests', executable('hdr-tests', test_sources + sources, dependencies: deps))
