test_sources = [
    'tests.vala',
    'asserts.vala',
    'Arrays.test.vala',
    'Bytes.test.vala',
    'Zlib.test.vala',
    'Histogram.test.vala', 
    'Histogram.encoding.test.vala', 
    'Int8Histogram.test.vala',
    'Int16Histogram.test.vala',
    'Int32Histogram.test.vala',
    'Int64.test.vala',
    'ZigZag.test.vala'
]

test('hdr-tests', executable('hdr-tests', test_sources + sources, dependencies: deps))
